force-app/main/default/objects/Campaign/fields/Campaign_Score__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Score__c</fullName>
    <label>Campaign Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>