force-app/main/default/objects/Campaign/fields/Campaign_Top_Negatives__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Top_Negatives__c</fullName>
    <label>Campaign Top Negatives</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Aborted</fullName>
            </value>
            <value>
                <fullName>Low Lead Volume</fullName>
            </value>
            <value>
                <fullName>Over Budget</fullName>
            </value>
            <value>
                <fullName>Low Expected Revenue</fullName>
            </value>
            <value>
                <fullName>Low Expected Response</fullName>
            </value>
            <value>
                <fullName>Low Conversion Rate</fullName>
            </value>
            <value>
                <fullName>Low Value Opportunities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>