force-app/main/default/objects/Campaign/fields/Campaign_Top_Positives__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Top_Positives__c</fullName>
    <label>Campaign Top Positives</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low Budget</fullName>
            </value>
            <value>
                <fullName>High Expected Revenue</fullName>
            </value>
            <value>
                <fullName>Campaign Completed</fullName>
            </value>
            <value>
                <fullName>Campaign In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>