force-app/main/default/objects/Campaign/listViews/Active_Campaigns_Analytics.listView-meta.xml
<ListView>
    <fullName>Active_Campaigns_Analytics</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Score__c</columns>
    <columns>Campaign_Top_Negatives__c</columns>
    <columns>Campaign_Top_Positives__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <filterScope>Everything</filterScope>
    <label>Campaigns Analytics CQ</label>
</ListView>